[project]
name = "proxy-checker"
version = "1.0.0"
description = "A fast, concurrent proxy testing and management tool."
authors = [{ name = "Subhojit Ghimire", email = "subhojitg@live.com" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "requests[socks]>=2.25",
]

[project.scripts]
proxy-checker = "proxy_checker.main:cli"